--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 #PacMen Factory
 
-This was a JavaScript project from MIT JavaScript Bootcamp that was created by me, Sandeep Sawhney
+This project uses a button to create PacMen, giving them different velocities, directions, and positions every time. Later, using the "Start Game Button" gradually increases the velocity of the PacMen linearly. However, due to the velocity from the start, some PacMen seem to increase speed faster than others
