--- a/README
+++ b/README
@@ -1,3 +1,9 @@
 #PacMen-Factory
 
-This project uses a button to create PacMen, giving them different velocities, directions, and positions every time. Later, using the "Start Game Button" gradually increases the velocity of the PacMen linearly. However, due to the velocity from the start, some PacMen seem to increase speed faster than others.
+Description: This project uses a button to create PacMen, giving them different velocities, directions, and positions every time. Later, using the "Start Game Button" gradually increases the velocity of the PacMen linearly. However, due to the velocity from the start, some PacMen seem to increase speed faster than others.
+
+How to run: Add PacMen with the "add PacMen" button and click start game to increase velocity.
+
+Future improvements: use the onClick() function to make the PacMen react to mouse clicks. Create an opening for the PacMen to be shot out with the "add PacMen" button.
+
+License
